# imgui-file-browser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_test.bat  build_test.sh  vcpkg.json
cmake/: ImFileBrowserConfig.cmake.in
include/ImFileBrowser/: Config.hpp  ConfirmationDialog.hpp  FileBrowserDialog.hpp  FileFilter.hpp  FileSystemHelper.hpp  Icons.hpp  ImFileBrowser.hpp  Types.hpp
scripts/: build-tests.sh
src/: Config.cpp  ConfirmationDialog.cpp  FileBrowserDialog.cpp
test/: CMakeLists.txt  main.cpp  vcpkg.json
vcpkg-ports-dev/imfilebrowser/: portfile.cmake  vcpkg.json
vcpkg-ports-dev/imguiscaling/: portfile.cmake  vcpkg.json
vcpkg-ports/imfilebrowser/: portfile.cmake  vcpkg.json
vcpkg-ports/imguiscaling/: portfile.cmake  vcpkg.json
